--- a/PSB_Firmware/PSB_Firmware.ioc
+++ b/PSB_Firmware/PSB_Firmware.ioc
@@ -4,14 +4,16 @@ CAD.pinconfig=
 CAD.provider=
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-I2C1.IPParameters=Timing,OwnAddress
+I2C1.I2C_Speed_Mode=I2C_Standard
+I2C1.IPParameters=Timing,OwnAddress,NoStretchMode,I2C_Speed_Mode
 I2C1.IPParametersWithoutCheck=OwnAddress
-I2C1.OwnAddress=ADDR_I2C_SLV
-I2C1.Timing=0x00909BEB
+I2C1.NoStretchMode=I2C_NOSTRETCH_DISABLE
+I2C1.OwnAddress=50
+I2C1.Timing=0x10909CEC
 I2C2.IPParameters=Timing
-I2C2.Timing=0x00909BEB
+I2C2.Timing=0x10909CEC
 I2C3.IPParameters=Timing
-I2C3.Timing=0x00909BEB
+I2C3.Timing=0x10909CEC
 KeepUserPlacement=false
 Mcu.CPN=STM32L433RCT6P
 Mcu.Family=STM32L4
@@ -55,7 +57,7 @@ Mcu.Pin8=PA3
 Mcu.Pin9=PA4
 Mcu.PinsNb=28
 Mcu.ThirdPartyNb=0
-Mcu.UserConstants=ADDR_CEA_DIGIPOT,0b0101100;ADDR_I2C_SLV,0xAA
+Mcu.UserConstants=ADDR_CEA_DIGIPOT,0b0101100;ADDR_I2C_SLV,0x32
 Mcu.UserName=STM32L433RCTxP
 MxCube.Version=6.9.1
 MxDb.Version=DB.6.0.91
@@ -63,6 +65,8 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+NVIC.I2C1_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.I2C1_EV_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
@@ -70,6 +74,8 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+PA10.GPIOParameters=GPIO_Pu
+PA10.GPIO_Pu=GPIO_PULLUP
 PA10.Locked=true
 PA10.Mode=I2C
 PA10.Signal=I2C1_SDA
@@ -119,6 +125,8 @@ PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=SMPS_SW [TS3A44159PWR_IN1_2]
 PA7.Locked=true
 PA7.Signal=GPIO_Output
+PA9.GPIOParameters=GPIO_Pu
+PA9.GPIO_Pu=GPIO_PULLUP
 PA9.Locked=true
 PA9.Mode=I2C
 PA9.Signal=I2C1_SCL
@@ -216,54 +224,53 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_I2C3_Init-I2C3-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_I2C3_Init-I2C3-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true
 RCC.ADCFreq_Value=64000000
-RCC.AHBFreq_Value=40000000
-RCC.APB1Freq_Value=40000000
-RCC.APB1TimFreq_Value=40000000
-RCC.APB2Freq_Value=40000000
-RCC.APB2TimFreq_Value=40000000
-RCC.CortexFreq_Value=40000000
-RCC.FCLKCortexFreq_Value=40000000
+RCC.AHBFreq_Value=80000000
+RCC.APB1Freq_Value=80000000
+RCC.APB1TimFreq_Value=80000000
+RCC.APB2Freq_Value=80000000
+RCC.APB2TimFreq_Value=80000000
+RCC.CortexFreq_Value=80000000
+RCC.FCLKCortexFreq_Value=80000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=40000000
+RCC.HCLKFreq_Value=80000000
 RCC.HSE_VALUE=8000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=40000000
-RCC.I2C2Freq_Value=40000000
-RCC.I2C3Freq_Value=40000000
+RCC.I2C1Freq_Value=80000000
+RCC.I2C2Freq_Value=80000000
+RCC.I2C3Freq_Value=80000000
 RCC.I2C4Freq_Value=80000000
-RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLR,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSourceVirtual,PREFETCH_ENABLE,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SDMMCFreq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
-RCC.LPTIM1Freq_Value=40000000
-RCC.LPTIM2Freq_Value=40000000
-RCC.LPUART1Freq_Value=40000000
+RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSourceVirtual,PREFETCH_ENABLE,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SDMMCFreq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
+RCC.LPTIM1Freq_Value=80000000
+RCC.LPTIM2Freq_Value=80000000
+RCC.LPUART1Freq_Value=80000000
 RCC.LSCOPinFreq_Value=32000
 RCC.LSI_VALUE=32000
-RCC.MCO1PinFreq_Value=40000000
+RCC.MCO1PinFreq_Value=80000000
 RCC.MSI_VALUE=4000000
 RCC.PLLN=10
 RCC.PLLPoutputFreq_Value=22857142.85714286
 RCC.PLLQoutputFreq_Value=80000000
-RCC.PLLR=RCC_PLLR_DIV4
-RCC.PLLRCLKFreq_Value=40000000
+RCC.PLLRCLKFreq_Value=80000000
 RCC.PLLSAI1PoutputFreq_Value=18285714.285714287
 RCC.PLLSAI1QoutputFreq_Value=64000000
 RCC.PLLSAI1RoutputFreq_Value=64000000
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSI
 RCC.PREFETCH_ENABLE=1
-RCC.PWRFreq_Value=40000000
+RCC.PWRFreq_Value=80000000
 RCC.RNGFreq_Value=64000000
 RCC.SAI1Freq_Value=18285714.285714287
 RCC.SDMMCFreq_Value=64000000
-RCC.SWPMI1Freq_Value=40000000
-RCC.SYSCLKFreq_VALUE=40000000
+RCC.SWPMI1Freq_Value=80000000
+RCC.SYSCLKFreq_VALUE=80000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.UART4Freq_Value=80000000
 RCC.UART5Freq_Value=80000000
-RCC.USART1Freq_Value=40000000
-RCC.USART2Freq_Value=40000000
-RCC.USART3Freq_Value=40000000
+RCC.USART1Freq_Value=80000000
+RCC.USART2Freq_Value=80000000
+RCC.USART3Freq_Value=80000000
 RCC.USBFreq_Value=64000000
 RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=160000000
