--- a/PSB_Firmware/PSB_Firmware.ioc
+++ b/PSB_Firmware/PSB_Firmware.ioc
@@ -23,8 +23,9 @@ Mcu.IP2=I2C3
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SYS
-Mcu.IP6=USART2
-Mcu.IPNb=7
+Mcu.IP6=TIM2
+Mcu.IP7=USART2
+Mcu.IPNb=8
 Mcu.Name=STM32L433RCTxP
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -36,18 +37,20 @@ Mcu.Pin13=PB10
 Mcu.Pin14=PB11
 Mcu.Pin15=PB12
 Mcu.Pin16=PB13
-Mcu.Pin17=PA9
-Mcu.Pin18=PA10
-Mcu.Pin19=PA13 (JTMS-SWDIO)
+Mcu.Pin17=PC6
+Mcu.Pin18=PA9
+Mcu.Pin19=PA10
 Mcu.Pin2=PC15-OSC32_OUT (PC15)
-Mcu.Pin20=PA14 (JTCK-SWCLK)
-Mcu.Pin21=PB3 (JTDO-TRACESWO)
-Mcu.Pin22=PB5
-Mcu.Pin23=PB6
-Mcu.Pin24=PB7
-Mcu.Pin25=PB8
-Mcu.Pin26=PB9
-Mcu.Pin27=VP_SYS_VS_Systick
+Mcu.Pin20=PA13 (JTMS-SWDIO)
+Mcu.Pin21=PA14 (JTCK-SWCLK)
+Mcu.Pin22=PB3 (JTDO-TRACESWO)
+Mcu.Pin23=PB5
+Mcu.Pin24=PB6
+Mcu.Pin25=PB7
+Mcu.Pin26=PB8
+Mcu.Pin27=PB9
+Mcu.Pin28=VP_SYS_VS_Systick
+Mcu.Pin29=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin3=PH0-OSC_IN (PH0)
 Mcu.Pin4=PH1-OSC_OUT (PH1)
 Mcu.Pin5=PC0
@@ -55,7 +58,7 @@ Mcu.Pin6=PC1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA4
-Mcu.PinsNb=28
+Mcu.PinsNb=30
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=ADDR_CEA_DIGIPOT,0b0101100;ADDR_I2C_SLV,0x32
 Mcu.UserName=STM32L433RCTxP
@@ -73,6 +76,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:false
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 PA10.GPIOParameters=GPIO_Pu
 PA10.GPIO_Pu=GPIO_PULLUP
@@ -186,12 +190,17 @@ PC14-OSC32_IN\ (PC14).Signal=RCC_OSC32_IN
 PC15-OSC32_OUT\ (PC15).Locked=true
 PC15-OSC32_OUT\ (PC15).Mode=LSE-External-Oscillator
 PC15-OSC32_OUT\ (PC15).Signal=RCC_OSC32_OUT
+PC6.GPIOParameters=GPIO_Label
+PC6.GPIO_Label=TIMING_PIN
+PC6.Locked=true
+PC6.Signal=GPIO_Output
 PH0-OSC_IN\ (PH0).GPIOParameters=GPIO_Label
 PH0-OSC_IN\ (PH0).GPIO_Label=MCO
 PH0-OSC_IN\ (PH0).Locked=true
-PH0-OSC_IN\ (PH0).Mode=HSE-External-Clock-Source
+PH0-OSC_IN\ (PH0).Mode=HSE-External-Oscillator
 PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
 PH1-OSC_OUT\ (PH1).Locked=true
+PH1-OSC_OUT\ (PH1).Mode=HSE-External-Oscillator
 PH1-OSC_OUT\ (PH1).Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
@@ -224,7 +233,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_I2C3_Init-I2C3-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_I2C3_Init-I2C3-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.ADCFreq_Value=64000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1Freq_Value=80000000
@@ -278,10 +287,16 @@ RCC.VCOSAI1OutputFreq_Value=128000000
 RCC.VCOSAI2OutputFreq_Value=128000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM2.IPParameters=Period,AutoReloadPreload,Prescaler
+TIM2.Period=40000
+TIM2.Prescaler=1000
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=NUCLEO-L433RC-P
 boardIOC=true
 isbadioc=false
