Added a mirror image of the IJC detector --DO NOT RUN THIS! STILL NEEDS THE RULES IMPLEMENTED--

--- a/PSB_Firmware/PSB_Firmware.ioc
+++ b/PSB_Firmware/PSB_Firmware.ioc
@@ -60,7 +60,7 @@ Mcu.Pin8=PA3
 Mcu.Pin9=PA4
 Mcu.PinsNb=30
 Mcu.ThirdPartyNb=0
-Mcu.UserConstants=ADDR_CEA_DIGIPOT,0b0101100;ADDR_I2C_SLV,0x32
+Mcu.UserConstants=ADDR_I2C_SLV,0x32
 Mcu.UserName=STM32L433RCTxP
 MxCube.Version=6.9.1
 MxDb.Version=DB.6.0.91
