--- a/PSB_Firmware/PSB_Firmware.ioc
+++ b/PSB_Firmware/PSB_Firmware.ioc
@@ -165,7 +165,7 @@ PB7.GPIO_Label=ENABLE_3_CEA
 PB7.Locked=true
 PB7.Signal=GPIO_Output
 PB8.GPIOParameters=GPIO_Label
-PB8.GPIO_Label=ENABLE_4
+PB8.GPIO_Label=ENABLE_4_CAEN
 PB8.Locked=true
 PB8.Signal=GPIO_Output
 PB9.GPIOParameters=GPIO_Label
